FoodBank/objects/ReportParams__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Income and Ethnicity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Demographics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demographics Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>ReportParams</label>
    <nameField>
        <label>ReportParams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportParams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>